updating manifest to freshservice placeholders

--- a/yext_ai_search_freshdesk-main 11/Yext AI Search/app/index.html
+++ b/yext_ai_search_freshdesk-main 11/Yext AI Search/app/index.html
@@ -4,7 +4,7 @@
     <link
       rel="stylesheet"
       type="text/css"
-      href="https://static.freshdev.io/fdk/2.0/assets/freshdesk.css"
+      href="https://static.freshdev.io/fdk/2.0/assets/freshservice.css"
     />
   </head>
   <body>
